--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "superconsole": "^0.1.1",
     "ws": "^0.8.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.4.0",
+    "mocha": "^2.3.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha -R spec test/*-test.js",
+    "test-cov": "jscoverage lib lib-cov && ./node_modules/mocha/bin/mocha -R html-cov test/*-test.js > coverage.html && rm -r lib-cov"
   },
   "repository": {
     "type": "git",
