docs(readme): Add instructions to run the test suite and the test coverage.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha -R spec test/*-test.js",
-    "test-cov": "jscoverage lib lib-cov && ./node_modules/mocha/bin/mocha -R html-cov test/*-test.js > coverage.html && rm -r lib-cov"
+    "test-cov": "export LOADGRAM_COV=1 && jscoverage lib lib-cov --exclude=./admin && ./node_modules/mocha/bin/mocha -R html-cov test/*-test.js > coverage.html && rm -r lib-cov"
   },
   "repository": {
     "type": "git",
